--- a/user/signup.html
+++ b/user/signup.html
@@ -6,19 +6,19 @@
     <link rel="stylesheet" href="/styles.css">
     <title>ZeroToCode: CityBucket</title>
   </head>
-  <body id="sign-up">
+  <body id="SignUp">
 
     <div class="Title">
       <h1>CityBucket Sign Up</h1>
     </div>
 
     <main>
-      <form name="sign-up">
+      <form name="SignUp">
         <label for="profile-name">Profile Name</label><br>
         <input type="text" name="profile-name" placeholder="what is your name?"><br>
         <label for="profession">Profession</label><br>
         <input type="text" name="profession" placeholder="what is your job title?"><br>
-        <input type="submit" value="sign-up">
+        <input type="submit" value="sign up">
         <!-- alternatively button type="submt">Sign Up</button -->
       </form>
     </main>
