--- a/user/signup.html
+++ b/user/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles.css">
-    <title>ZeroToCode: CityBucket</title>
+    <title>CityBucket</title>
   </head>
   <body id="SignUp">
 
@@ -14,10 +14,8 @@
 
     <main>
       <form name="SignUp">
-        <label for="profile-name">Profile Name</label><br>
-        <input type="text" name="profile-name" placeholder="what is your name?"><br>
-        <label for="profession">Profession</label><br>
-        <input type="text" name="profession" placeholder="what is your job title?"><br>
+        <input type="text" name="name" placeholder="what is your name?">
+        <input type="text" name="profession" placeholder="what is your job title?">
         <input type="submit" value="sign up">
         <!-- alternatively button type="submt">Sign Up</button -->
       </form>
